# Window-API-Playground

./: CMakeLists.txt  README.md  app.manifest  main.cpp  resource.rc
include/: business.hpp  data_manager.hpp  font_utils.hpp  label_utils.hpp
include/sql_tables/: companies.sql  company_gather_levels.sql  company_gather_speeds.sql  sessions.sql
src/: business.cpp  data_manager.cpp  font_utils.cpp  label_utils.cpp
